--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <p>
                     My name is <strong><em> Mohamad Aamir Nishar Ahmad</em></strong>.I m in the 3rd year of my B.E from <a href="http://www.gecpt.cteguj.in/">Government Engineering College Patan</a> 
                     in the field of <em>Computer Science and Engineering</em>.Right now i m doing online course of <strong><a href="https://www.udemy.com/course/the-complete-web-development-bootcamp">Full-stack web development</a></strong> 
-                    from udemy which is worth of 500 rs.
+                    from udemy.
                 </p>
             </td>
         </tr>
@@ -60,7 +60,7 @@
                 </tr>
                 <tr>
                     <td>4th</td>
-                    <td>9.09</td>
+                    <td>8.26</td>
                     <td>Not Available</td>
                 </tr>
             </tbody>
@@ -98,7 +98,7 @@
                         <td>⭐⭐⭐⭐</td>
                     </tr>
                     <tr>
-                        <td>WEb development</td>
+                        <td>Web development</td>
                         <td>⭐⭐⭐</td>
                     </tr>
                 </table>
